# staked-media-monorepo

./: .env.example  .gitignore  Makefile  README.md  config.example.json  mvp-prd-review-2026-03-30.md  prd-twitter-copilot-plugin-detailed-v1.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  llm.py  logging_utils.py  main.py  orchestrator.py  persona.py  run.py  schemas.py  upstream.py  web_enrichment.py
app/llm/: base_client.py  gemini_client.py  openai_client.py  utils.py
apps/backend/: pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  config.py  database.py  hot_events.py  logging_utils.py  main.py  orchestrator.py  persona.py  post_formatting.py  run.py  schemas.py  upstream.py  web_enrichment.py
apps/backend/app/llm/: __init__.py  base_client.py  errors.py  factory.py  gemini_client.py  openai_client.py  utils.py
apps/backend/tests/: test_api.py  test_config.py  test_database.py  test_hot_events_service.py  test_llm.py  test_logging.py  test_orchestrator.py  test_persona.py  test_post_formatting.py  test_run.py  test_upstream.py
apps/browser-extension/: .gitignore  README.md  biome.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.tests.json
extension/: README.md  background.js  content-script.js  manifest.json  options.html  options.js  panel-helpers.js  panel.css  panel.html  panel.js  shared.js
tests/: test_api.py  test_config.py  test_database.py  test_llm.py  test_logging.py  test_orchestrator.py  test_persona.py  test_run.py  test_upstream.py
(+40 files in other folders)
