[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "staked-media-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.101,<1",
    "uvicorn>=0.27,<1",
    "pydantic>=1.10,<2",
    "requests>=2.31,<3",
    "httpx>=0.26,<1",
    "defusedxml>=0.7,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff",
    "pyright",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "S",   # bandit (security)
    "B",   # bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
